--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.data.mongodb.database=smartform_db
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=smartformmongodb
 spring.data.mongodb.port=27017
 
 # App Properties
