--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.data.mongodb.database=smartform_db
-# spring.data.mongodb.host=smartformmongodb
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=smartformmongodb
+# spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 
 # App Properties
-bezkoder.app.jwtSecret= smartFormSecretKey
-bezkoder.app.jwtExpirationMs= 86400000
+smartform.app.jwtSecret= smartFormSecretKey
+smartform.app.jwtExpirationMs= 86400000
