--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,11 @@ spring.data.mongodb.port=27017
 # App Properties
 smartform.app.jwtSecret= smartFormSecretKey
 smartform.app.jwtExpirationMs= 86400000
+
+# For Spring Mail 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=noreplyquantum442@gmail.com
+spring.mail.password=12345678Quantum
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
